--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    ext.koin_version = "2.1.5"
-    ext.lifecycleExtensionsVersion = "2.2.0"
+    ext {
+        kotlin_version = "1.3.72"
+        koin_version = "2.1.5"
+        lifecycleExtensionsVersion = "2.2.0"
+        retrofit_version = '2.3.0'
+        adapter_livedata_version = '1.0.0'
+        kotlinx_version = '0.4.0'
+
+    }
+
     repositories {
         google()
         jcenter()
@@ -10,6 +17,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
