--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.3.72"
+        kotlin_version = '1.3.50'
         koin_version = "2.1.5"
+        gradle_version = '4.0.0'
         lifecycleExtensionsVersion = "2.2.0"
         retrofit_version = '2.3.0'
         adapter_livedata_version = '1.0.0'
         kotlinx_version = '0.4.0'
-        room_version = '2.2.0'
-        anko_version = '0.10.8'
+        lifecycleVersion = '2.0.0'
     }
 
     repositories {
@@ -16,7 +16,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
