--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "androidx.room:room-runtime:$room_version"
 
 }
