--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
 
 }
