--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,31 @@ android {
 
     defaultConfig {
         applicationId "com.tw.mvvm_example"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    composeOptions {
+        //kotlinCompilerExtensionVersion "0.1.0-dev13"
+        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+        kotlinCompilerExtensionVersion "0.1.0-dev14"
     }
 
     buildTypes {
@@ -26,6 +45,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -55,5 +75,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
-
+    implementation "androidx.compose:compose-runtime:0.1.0-dev14"
+    implementation 'androidx.ui:ui-core:0.1.0-dev13'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev13'
+    implementation 'androidx.ui:ui-layout:0.1.0-dev13'
+    implementation 'androidx.ui:ui-material:0.1.0-dev13'
 }
