--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.50'
         koin_version = "2.1.5"
-        gradle_version = '4.0.0'
+        gradle_version = '4.0.1'
         lifecycleExtensionsVersion = "2.2.0"
         retrofit_version = '2.3.0'
         adapter_livedata_version = '1.0.0'
@@ -12,6 +12,11 @@ buildscript {
         anko_version = '0.10.8'
         glide_version = '4.9.0'
         room_version = "2.2.5"
+        mockito_kotlin_version="1.5.0"
+        lifecycleExtensionsVersion="2.1.0"
+        test_runner_version="1.2.0"
+        espresso_version="3.2.0"
+        test_ext_version="1.1.1"
     }
 
     repositories {
